--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,6 @@
 {
-    "plugins": ["prettier", "import"],
-    "extends": [
-        "plugin:prettier/recommended",
-        "prettier"
-    ],
+    "plugins": ["import", "prettier"],
+    "extends": ["plugin:prettier/recommended", "eslint:recommended", "prettier"],
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module"
@@ -15,7 +12,18 @@
     },
     "rules": {
         "no-debugger": "off",
-        "no-console": 0,
-        "class-methods-use-this": "off"
+        "no-console": "off",
+        "class-methods-use-this": "off",
+        "prettier/prettier": [
+            "error",
+            {
+                "trailingComma": "all",
+                "tabWidth": 4,
+                "semi": true,
+                "singleQuote": true,
+                "printWidth": 120,
+                "endOfLine": "auto"
+            }
+        ]
     }
 }
