--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
         "copy-webpack-plugin": "^12.0.2",
         "css-loader": "^6.10.0",
         "dotenv-webpack": "^8.0.1",
-        "eslint": "^8.56.0",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-prettier": "^5.2.3",
         "html-webpack-plugin": "^5.6.0",
-        "prettier": "3.2.5",
+        "prettier": "^3.2.5",
         "style-loader": "^3.3.4",
         "webpack": "^5.90.1",
         "webpack-cli": "^5.1.4",
